// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalBox Test 1`] = `
.pf-c-modal-box {
  display: block;
}

<div
  aria-describedby="id"
  aria-label="test title"
  aria-modal="true"
  className="pf-c-modal-box"
  role="dialog"
>
  This is a ModalBox
</div>
`;

exports[`ModalBox Test isLarge 1`] = `
.pf-c-modal-box.pf-m-lg {
  display: block;
}

<div
  aria-describedby="id"
  aria-label="Test Modal title"
  aria-modal="true"
  className="pf-c-modal-box pf-m-lg"
  role="dialog"
>
  This is a ModalBox
</div>
`;

exports[`ModalBox Test isOpen 1`] = `
.pf-c-modal-box.pf-m-lg {
  display: block;
}

<div
  aria-describedby="id"
  aria-label="Test Modal title"
  aria-modal="true"
  className="pf-c-modal-box pf-m-lg"
  isOpen={true}
  role="dialog"
>
  This is a ModalBox
</div>
`;
